z-index fix

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -1389,10 +1389,6 @@ body > .ui-autocomplete{
 	width: 100%;
 	position: relative;
 	z-index: 9999;
-	+ div{
-		position: relative;
-		z-index: 1;
-	}
 }
 
 h1 + .view-toolbar-container{
